--- a/esp32-fw/csi_active_ap/main/CMakeLists.txt
+++ b/esp32-fw/csi_active_ap/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "csi_active_ap.c"
+idf_component_register(SRCS "main.c" "csi_active_ap.c"
                     INCLUDE_DIRS ".")
